tests/baselines/reference/tsxStatelessFunctionComponents2.errors.txt
tests/cases/conformance/jsx/file.tsx(2,1): error TS1148: Cannot compile modules unless the '--module' flag is provided.
tests/cases/conformance/jsx/file.tsx(20,16): error TS2339: Property 'ref' does not exist on type 'IntrinsicAttributes & { name?: string; }'.
tests/cases/conformance/jsx/file.tsx(26,42): error TS2339: Property 'subtr' does not exist on type 'string'.
tests/cases/conformance/jsx/file.tsx(28,33): error TS2339: Property 'notARealProperty' does not exist on type 'BigGreeter'.
tests/cases/conformance/jsx/file.tsx(36,26): error TS2339: Property 'propertyNotOnHtmlDivElement' does not exist on type 'HTMLDivElement'.


==== tests/cases/conformance/jsx/file.tsx (5 errors) ====
    
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided.
    
    function Greet(x: {name?: string}) {
    	return <div>Hello, {x}</div>;
    }
    
    class BigGreeter extends React.Component<{ name?: string }, {}> {
    	render() {
    		return <div></div>;
    	}
    	greeting: string;
    }
    
    // OK
    let a = <Greet />;
    // OK - always valid to specify 'key'
    let b = <Greet key="k" />;
    // Error - not allowed to specify 'ref' on SFCs
    let c = <Greet ref="myRef" />;
                   ~~~
!!! error TS2339: Property 'ref' does not exist on type 'IntrinsicAttributes & { name?: string; }'.
    
    
    // OK - ref is valid for classes
    let d = <BigGreeter ref={x => x.greeting.substr(10)} />;
    // Error ('subtr' not on string)
    let e = <BigGreeter ref={x => x.greeting.subtr(10)} />;
                                             ~~~~~
!!! error TS2339: Property 'subtr' does not exist on type 'string'.
    // Error (ref callback is contextually typed)
    let f = <BigGreeter ref={x => x.notARealProperty} />;
                                    ~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'notARealProperty' does not exist on type 'BigGreeter'.
    
    // OK - key is always valid
    let g = <BigGreeter key={100} />;
    
    // OK - contextually typed intrinsic ref callback parameter
    let h = <div ref={x => x.innerText} />;
    // Error - property not on ontextually typed intrinsic ref callback parameter
    let i = <div ref={x => x.propertyNotOnHtmlDivElement} />;
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'propertyNotOnHtmlDivElement' does not exist on type 'HTMLDivElement'.
    
    